--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "server.ts",
   "scripts": {
     "test": "test",
-    "start": "ts-node src/server.ts",
-    "dev": "nodemon --watch src --exec ts-node src/server.ts"
+    "start": "ts-node-dev src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -20,10 +19,13 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "zod": "^3.23.8"
   }
 }
