--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
+    "@types/faker": "^6.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.2",
+    "faker": "^5.5.3",
+    "mongoose": "^8.6.3",
     "zod": "^3.23.8"
   }
 }
